--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
                     Наша Саванна очень хорошо его приняла, воспитала, как настоящая мама. У него бешенный характер, он ничего не боится и прыгает с высоты, очень игривый, тактильный, ревнивый, любит ласку и внимание,а еще посидеть на чьем-нибудь плече или на руках.
                     Мы все безума от него, ведь он поднимает всем настроение и смешит.
            </p>
-                <h5>Соня</h5>
+                <h5>Соня</h5>upup
                 <p>
                    В 2015 году я пожелала на день рождения черепашек красноухих земно-водных.Тогда мы с братом поехали в зоомагазин и купили двух,еще аквариум им, фильтр, камни и еду.Они отличались поведением и размерами-Соня спокойная и  большая, а Шустрик энергичный и маленький.К сожалению, выжила только Соня, потому что Шустрик был слабым. Соня многое пережила, но всегда оставалась с нами.
-                   Сейчас она стала еще больше и нужно покупать аквариум большего размера.Её цвет-темно зеленый или болотный, ушки красные, а животик светлый, длинные когти и мощная челюсть.Кормим мы ее мотылем-это замороженные,спресованные червячки.
+                   Сейчас она стала еще больше и нужно покупать акваupриум большего размера.Её цвет-темно зеленый или болотный, ушки красные, а животик светлый, длинные когти и мощная челюсть.Кормим мы ее мотылем-это замороженные,спресованные червячки.
                    </p>
+
+                <h1>Восьмерки</h1>
+                <li><a href="./eight/eight.html">Игра восьмёрки</a></li>
             </main>
          </div>
     </body>
