--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
                 <h1>Восьмерки</h1>
                 <li><a href="./eight/eight.html">Игра восьмёрки</a></li>
+                 <h1>Сапёр</h1>
+                <li><a href="./minesweeper1/index1.html">Сапёр</a></li>
             </main>
          </div>
     </body>
